# sentinelguard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  cleanbuild.sh  main.cpp  protections.cpp  protections.hpp  termcolor.hpp
